--- a/5_JavaScript/practice/practice3.html
+++ b/5_JavaScript/practice/practice3.html
@@ -1,18 +1,19 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
     <style>
-        .area{
+        .area {
             height: 200px;
             border: 1px solid black;
         }
     </style>
 </head>
+
 <body>
     <h1>Practice1</h1>
     <form action="">
@@ -92,7 +93,7 @@
                     </td>
                     <td>
                         <label>
-                            <input type="checkbox" name="hobby" value="컴퓨터" >
+                            <input type="checkbox" name="hobby" value="컴퓨터">
                             컴퓨터
                         </label>
                     </td>
@@ -113,41 +114,45 @@
     <div class="area" id="area1"></div>
 
     <script>
-        function wirghtHobbyList(){
-            const area = document.getElementById("area1")
-
+        function wirghtHobbyList() {
+            const area = document.getElementById("area1");
             const hobbyCheckBoxList = document.getElementsByName("hobby");
 
             let str = "";
-            for (let box of hobbyCheckBoxList){
-                if(box.checked){
+            for (let box of hobbyCheckBoxList) {
+                if (box.checked) { // 선택된 항목만 처리
                     str += box.value + " ";
                 }
+                if (str.trim() === "") {
+                    area.innerText = "선택된 항목이 없습니다.";
+                }
+
             }
 
-            area.innerText = str;
+            area.innerText = str; // 선택된 항목을 출력
         }
 
-        function allCheck(_allChecBox){
-            //전체선택 체크박스의 값
-            checked = _allChecBox.checked;
 
-            //name이 hobby인 모든 체크박스를 checked로변경
+        function allCheck(_allChecBox) {
+            const checked = _allChecBox.checked; // 전체 선택 체크박스의 상태(true 또는 false)
+            console.log(checked); // true(선택됨) 또는 false(해제됨)
+
             const hobbyCheckBoxList = document.getElementsByName("hobby");
-            for (let box of hobbyCheckBoxList){
-                box.checked = checked;
+            for (let box of hobbyCheckBoxList) {
+                box.checked = checked; // 개별 체크박스 상태를 전체 선택 체크박스와 동기화
             }
-
         }
 
-        function isAllHobbyChecked(){
+
+
+        function isAllHobbyChecked() {
             //모든 체크박스가 체크가 되어있는지 검사 후 
             // 모두 체크 -> return true;
             // 하나라도 아니라면 -> return false;
 
             const hobbyCheckBoxList = document.getElementsByName("hobby");
-            for(let box of hobbyCheckBoxList){
-                if(!box.checked){
+            for (let box of hobbyCheckBoxList) {
+                if (!box.checked) { // 하나라도 선택되지 않았다면 false
                     return false;
                 }
             }
@@ -156,12 +161,21 @@
         }
 
         const hobbyCheckBoxList = document.getElementsByName("hobby");
-        for(let box of hobbyCheckBoxList){
-           box.onchange = function(){
+        for (let box of hobbyCheckBoxList) {
+            box.onchange = function () {
                 const allCheckBox = document.getElementById('all-hobby-check-box');
                 allCheckBox.checked = isAllHobbyChecked();
-           }
+            }
+            /*여기서는 this가 쓰이지 않았기에 위와 동일한 결과를 내는 코드이다.
+
+            box.onchange = () => { 
+          const allCheckBox = document.getElementById('all-hobby-check-box');
+          allCheckBox.checked = isAllHobbyChecked();
+            };
+
+            */
         }
     </script>
 </body>
+
 </html>
