--- a/5_JavaScript/01_개요.html
+++ b/5_JavaScript/01_개요.html
@@ -41,8 +41,8 @@
         때문에 수행속도가 빠름
       </li>
       <li>
-        코드 작성이 간단해서 초보자가 접하기 쉽다.(단순한 구조, 원칙) ex)
-        접근제한 개념 없음, 변수의 선언시 자료형 정해둘 필요 없음
+        코드 작성이 간단해서 초보자가 접하기 쉽다.(단순한 구조, 원칙) 
+        ex) 접근제한 개념 없음, 변수의 선언시 자료형 정해둘 필요 없음
       </li>
     </ul>
 
@@ -70,7 +70,7 @@
     <h4>1) inline</h4>
 
     <p>
-      [표현법] &lt;태그 on이벤트명="해당 요소의 이벤트 발생시 실행할 코드" &gt;
+      [표현법] &lt; 태그 on이벤트명="해당 요소의 이벤트 발생시 실행할 코드" &gt;
     </p>
     <!-- 소스코드가 소량일 경우 inline방식을 많이 사용 -->
     <button onclick="window.alert('알림창 출력 버튼 클릭!!')">
