--- a/5_JavaScript/09_jQuery1.html
+++ b/5_JavaScript/09_jQuery1.html
@@ -10,15 +10,16 @@
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.14.0/jquery-ui.min.js"
         integrity="sha256-Fb0zP4jE3JHqu+IBB9YktLcSjI1Zc6J2b6gTjB0LpoM=" crossorigin="anonymous"></script>
-    <!--jQuery UI는 jQuery에 의존적:
+    <!--
+        jQuery UI는 jQuery에 의존적:
 
-jQuery UI는 jQuery 라이브러리를 기반으로 동작하기 때문에 두 파일 모두 필요합니다.
-즉, jQuery가 없으면 jQuery UI는 작동하지 않습니다.
-서로 다른 기능 제공:
+        jQuery UI는 jQuery 라이브러리를 기반으로 동작하기 때문에 두 파일 모두 필요합니다.
+        즉, jQuery가 없으면 jQuery UI는 작동하지 않습니다.
+        서로 다른 기능 제공:
 
-jQuery 기본 라이브러리는 데이터 조작, 이벤트 처리에 중점을 둡니다.
-jQuery UI는 시각적이고 상호작용적인 사용자 경험을 추가하는 데 사용됩니다.
--->
+        jQuery 기본 라이브러리는 데이터 조작, 이벤트 처리에 중점을 둔다.
+        jQuery UI는 시각적이고 상호작용적인 사용자 경험을 추가하는 데 사용된다.
+    -->
 </head>
 
 <body>
@@ -54,12 +55,12 @@ jQuery UI는 시각적이고 상호작용적인 사용자 경험을 추가하는
     <p>
         jquery구문으로 dom요소를 다루는 구문을 기본적으로 작성할 것이기 때문에 <br>
         문서상에 요소들이 다 만들어지고나서 실행되어야한다. 아니면 DOM요소를 찾을 수 없어서 동작하지 않는다.
-        Query 코드를 DOM이 완전히 로드된 후 실행되도록 작성해야 합니다.
-        이를 위해 jQuery의 $(document).ready() 구문을 사용합니다.
+        Query 코드를 DOM이 완전히 로드된 후 실행되도록 작성해야힌다.
+        이를 위해 jQuery의 $(document).ready() 구문을 사용한다.
     </p>
 
     <pre>
-        >순수 자바스크립트에서는 
+        > 순수 자바스크립트에서는 
         window.onload = function(){
             실행내용;
         }
@@ -71,6 +72,19 @@ jQuery UI는 시각적이고 상호작용적인 사용자 경험을 추가하는
 
 
     <script>
+        /*
+            window.onload와  $(document).ready()의 차이
+
+            1. window.onload
+            HTML 문서와 모든 외부 리소스(이미지, CSS 파일 등)가 모두 로드된 후 실행된다.
+            즉, 페이지의 완전한 로딩이 끝난 뒤 실행된다.
+
+            2. $(document).ready()
+            DOM(Document Object Model)이 완전히 로드되었을 때 실행된다.
+            DOM이 준비되면 곧바로 실행되며, 이미지나 CSS 같은 외부 리소스는 로드 상태와 관계없이 동작한다.
+        */
+
+
         //$(요소).ready(함수) -> 요소가 로딩되면 함수를 실행해줘
         //$(document).ready()는 jQuery에서 제공하는 함수로, HTML 문서의 DOM 요소가 모두 로드되었을 때 코드를 실행하도록 보장한다.
         $(document).ready(function () {
@@ -134,7 +148,7 @@ jQuery UI는 시각적이고 상호작용적인 사용자 경험을 추가하는
             // } 
 
             //jQuery방식 -> $('선택자(식별자)')
-            $('p, h3').css("color", "red")
+           // $('p, h3').css("color", "red")
 
             //$('.btn1').click(callback);
             $('.btn1').click(function (ev) {
@@ -174,6 +188,7 @@ jQuery UI는 시각적이고 상호작용적인 사용자 경험을 추가하는
 
         // el.innerHTML = "<span>변경할 값</span>";
         // $(el).html("<span>변경할 값</span>");
+
         // el.innerText = "<span>변경할 값</span>";
         // $(el).text("<span>변경할 값</span>");
 
@@ -209,6 +224,9 @@ jQuery UI는 시각적이고 상호작용적인 사용자 경험을 추가하는
 
             //속성을 변경
             $(":checkbox").attr('checked', true);
+            //.attr() 대신 .prop() 메서드를 사용하는 것이 권장//동적으로 변경된 상태를 반영한 값.
+            //$(":checkbox").prop('checked', true);
+
 
             //첨부파일 input의 배경색을 green으로
             $(":file").css("background", "green");
